Wed Feb 11 02:06:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Remove 
	arbitrary low upper limits on the xpad, ypad, width and height
	properties.  (#129696, John Ellis)

Wed Feb 11 01:24:20 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_cell_layout_clear_attributes): 
	Ugh. Don't try to free ints, even if they're stored in pointers.
	(#133997, Morten Welinder)

2004-02-10  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (gtk_file_chooser_default_finalize):
	Free the filters.  Fixes #133547, patch by Morten Welinder
	<mortenw@gnome.org>.

Tue Feb 10 12:02:14 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/xsettings-client.c (read_settings): Avoid
	triggering an X error when the client->manager_window
	is None...makes logs look cleaner.

	* gdk/x11/gdkproperty-x11.c (gdk_property_get): Handle
	GDK_NONE to mean AnyPropertyType as documented. (Reported 
	by Yu Shao)

	* gdk/x11/gdkevents-x11.c (fetch_net_wm_check_window,
	gdk_x11_screen_get_window_manager_name): Fix error trap
	we've been leaking since 2002... (#129538)

2004-02-10  Federico Mena Quintero  <federico@ximian.com>

	Fixes the entry-related part of #133852.

	* gtk/gtkfilechooserdefault.c (update_chooser_entry): Don't change
	the file part of the entry if the selected item is a folder.

2004-02-10  Federico Mena Quintero  <federico@ximian.com>

	Fixes #133995, patch by Morten Welinder <mortenw@gnome.org>.

	* tests/prop-editor.c (create_prop_editor): Free the title.
	(object_changed): Free the children list.

>>>>>>> 1.4914
Tue Feb 10 01:58:55 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcontainer.c (gtk_container_set_focus_hadjustment): 
	* gtk/gtkcontainer.c (gtk_container_set_focus_vadjustment): Document 
	these functions.

2004-02-09  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (set_list_model): Request