@@ -1,3 +1,9 @@
+Wed Feb 11 02:23:39 2004  Matthias Clasen  <maclas@gmx.de>
+
+	* gtk/gtkcontainer.c (gtk_container_real_set_focus_child): Handle
+	focus [hv]adjustment correctly when the focus is located deeper
+	down in the hierarchy.  (#133489)
+
 Wed Feb 11 02:06:38 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcellrenderer.c (gtk_cell_renderer_class_init): Remove 
@@ -44,7 +50,6 @@ Tue Feb 10 12:02:14 2004  Owen Taylor  <otaylor@redhat.com>
 	* tests/prop-editor.c (create_prop_editor): Free the title.
 	(object_changed): Free the children list.
 
->>>>>>> 1.4914
 Tue Feb 10 01:58:55 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk/gtkcontainer.c (gtk_container_set_focus_hadjustment): 
